--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,18 @@
 {
     "makefile.extensionOutputFolder": "./.vscode",
-    "cmake.configureOnOpen": false
+    "terminal.integrated.profiles.windows": {
+        "MINGW32 / MSYS2": {
+            "path": "C:/msys64/msys2_shell.cmd",
+            "args": [
+                "-defterm",
+                "-here",
+                "-no-start",
+                "-mingw32"
+            ]
+        },
+    },
+    "terminal.integrated.defaultProfile.windows": "MINGW32 / MSYS2",
+    "files.associations": {
+        "iostream": "cpp"
+    }
 }
